--- a/docs/quickstarts/web3.mdx
+++ b/docs/quickstarts/web3.mdx
@@ -5,78 +5,28 @@ description: Learn to install and initialize Clerk in a new Web3 application.
 
 # Use Clerk with Web3
 
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application.
+Learn how to use Clerk to quickly and easily add secure authentication and user management to your Web3 application.
 
-Before you start
-You need to create a Clerk Application in your Clerk Dashboard. Configure the application to use "Sign in with Metamask"
+## Before you start
 
+You need to create a Clerk application in your [Clerk Dashboard](https://dashboard.clerk.com/) and configure the application to use **Sign in with Metamask**. For more information on how to set up a Clerk application, see [Getting started with Clerk](/docs/getting-started). To enable Metamask authentication, check out this [guide](/docs/authentication/configuration/sign-in-options#social-o-auth-web3).
 
-Choose the "Sign in with Metamask" authentication strategy
-Creating a new Next.js app
-Start by creating a new Next.js application - this is usually done using the CLI
+## Creating a new Next.js app
 
-npm
-yarn
+Once you have a Clerk application set up in the dashboard, it's time to create a Next.js application. Clerk provides a detailed guide on how to [create a new Next.js app with Clerk](https://docs.clerk.dev/guides/nextjs).
 
-npx create-next-app
-If you wish to use TypeScript, just add --typescript to the commands above. Clerk is written in TypeScript, so it works out of the box without any extra configuration. For more information, you can reference the Next.js documentation.
+## Requiring Web3 authentication
 
-Installing Clerk
-Once you have a Next.js app ready, you need to install the Clerk React SDK. This will give you access to our prebuilt Clerk Components and React hooks.
-
-npm
-yarn
-
-# Navigate to your application's root directory
-cd yourapp
-
-# Install the clerk/nextjs package 
-npm install @clerk/nextjs
-Add your .env
-
-
-.env.local
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aGFuZHktZ251LTIwLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
-To run your app, start the development server and navigate to http://localhost:3000.
-
-npm
-yarn
-
-npm run dev
-For more details, consult the Clerk React installation page.
-
-Adding <ClerkProvider />
-Clerk requires your application to be wrapped in the <ClerkProvider/> component. In Next.js, we add this in pages/_app.js.
-
-_app.js
-
-import { ClerkProvider } from '@clerk/nextjs';
-
-function MyApp({ Component, pageProps }) {
-
-  return (
-    // Wrap your entire app with ClerkProvider
-    <ClerkProvider>
-      <Component {...pageProps} />
-    </ClerkProvider>
-  );
-}
-
-export default MyApp;
-<ClerkProvider/> from the @clerk/nextjs package is already configured to using the same routing logic with Next.js. This makes sure that navigating between subpages and when navigating to callback URLs, routing remains consistent.
-
-Requiring Web3 authentication
 The easiest way to require authentication before showing a protected page is to use our Control Components:
 
-​<SignedIn/>: Renders its children only when a user is signed in.
-​<SignedOut/>: Renders its children only when there's no active user.
-As a child of <SignedOut/>, we will include our <SignInWithMetamaskButton/> so the user can trigger the Metamask authentication flow.
+[`​<SignedIn/>`](/docs/components/control/signed-in): Renders its children only when a user is signed in.
+[`​<SignedOut/>`](/docs/components/control/signed-out): Renders its children only when there's no active user.
 
-The following example shows you how to compose our flexible Control Components to build authentication flows that match your needs. Please note that you don't need to use any additional APIs, everything shown below is just Javascript.
+As a child of `<SignedOut/>`, we will include our [`<SignInWithMetamaskButton/>`](/docs/components/unstyled/sign-in-with-metamask) so the user can trigger the Metamask authentication flow.
 
+The following example shows you how to compose our flexible [Control Components](/docs/components/overview) to build authentication flows that match your needs. Please note that you don't need to use any additional APIs, everything shown below is just Javascript.
 
-_app.js
+```jsx filename="_app.js" copy
 import '../styles/globals.css'
 import { ClerkProvider, SignedIn, SignedOut, SignInWithMetamaskButton } from '@clerk/nextjs';
 import { useRouter } from 'next/router';
@@ -117,12 +67,15 @@ function MyApp({ Component, pageProps }) {
 }
 
 export default MyApp;
-Visit http://localhost:3000 to see your page. The home "/" page is not listed in the publicPages array, so you'll immediately see the Sign in with Metamask button - go ahead and try it!
+```
 
-Hello, world!
-After signing in with Metamask, you'll be presented with the Next.js default start screen. Let's update pages/index.js to retrieve add a UserButton and retrieve the current users Metamask address:
+Visit http://localhost:3000 to see your page. The home "/" page is not listed in the `publicPages` array, so you'll immediately see the **Sign in with Metamask** button - go ahead and try it!
 
+## Hello, world!
 
+After signing in with Metamask, you'll be presented with the Next.js default start screen. Let's update `pages/index.js` by adding a [`<UserButton />`](/docs/components/user/user-button) to retrieve the current users' Metamask address:
+
+```jsx filename="pages/index.js" copy
 import { UserButton, useUser } from "@clerk/nextjs";
 
 export default function Home() {
@@ -145,11 +98,15 @@ export default function Home() {
     </>
   );
 }
-Accessing the Web3 address from the backend
-Add authentication to a serverless API route
-A new Next.js app comes with a sample API route in /pages/api/hello.js. Let's modify it to retrieve the user's Web3 address:
+```
 
+## Accessing the Web3 address from the backend
 
+### Add authentication to a serverless API route
+
+A new Next.js app comes with a sample API route in `/pages/api/hello.js`. Let's modify it to retrieve the user's Web3 address:
+
+```jsx filename="pages/api/hello.js" copy
 import { requireSession } from "@clerk/nextjs/api";
 
 export default requireSession(async (req, res) => {
@@ -172,8 +129,20 @@ export default requireSession(async (req, res) => {
     });
   }
 });
-Next steps
-You now have Web3 authentication on a new Next.js application, and you know how to retrieve the user's Web3 address from both the frontend and the backend.
+```
 
-When you're ready, learn how to deploy your app to production.
-Get support or at least say hi in our Discord channel 👋. Web3 is a new feature and we'd love to hear your feedback.
+## Next steps
+
+Now that you have Web3 authentication in a new Next.js application, and you know how to retrieve the user's Web3 address from both the frontend and the backend, you will want to read the following documentation:
+
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
+
+    <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/overview" cta="Learn More" />
+
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/nextjs/overview#client-side-helpers" cta="Learn More" />
+
+    <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
+  </div>
+</div>
