fix broken link

--- a/docs/quickstarts/web3.mdx
+++ b/docs/quickstarts/web3.mdx
@@ -9,7 +9,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 ## Before you start
 
-You need to create a Clerk application in your [Clerk Dashboard](https://dashboard.clerk.com/) and configure the application to use **Sign in with Metamask**. For more information on how to set up a Clerk application, see [Getting started with Clerk](/docs/getting-started). To enable Metamask authentication, check out this [guide](/docs/authentication/configuration/sign-in-options#social-o-auth-web3).
+You need to create a Clerk application in your [Clerk Dashboard](https://dashboard.clerk.com/) and configure the application to use **Sign in with Metamask**. For more information on how to set up a Clerk application, check out our [setup guide](/docs/quickstarts/setup-clerk). To enable Metamask authentication, check out [this guide](/docs/authentication/configuration/sign-in-options#social-o-auth-web3).
 
 ## Creating a new Next.js app
 
