--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -1,21 +1,14 @@
 ---
 title: User metadata
-description: >-
-  Metadata allows for custom data to be saved on the User object. There are three types of metadata: "unsafe", "public", and "private".
+description: Metadata allows for custom data to be saved on the User object.
 ---
-
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-import { Tables } from "@/components/Table";
 
 # User metadata
 
-Metadata allows for custom data to be saved on the User object. There are three types of metadata: "unsafe", "public", and "private".
+Metadata allows for custom data to be saved on the [`User` object](/docs/users/overview#user-object). There are three types of metadata: "unsafe", "public", and "private".
 
 <Tables
   headings={["Metadata", "Frontend API", "Backend API"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {cells: [<>Private</>, <>No read or write access</>, <>Read & write access</>]},
     {cells: [<>Public</>, <>Read access</>, <>Read & write access</>]},
@@ -116,7 +109,7 @@ clerk.users.updateMetadata("user_xyz", private_metadata: privateMetadata)
 
 ### Retrieving private metadata
 
-You can retrieve the private metadata for a user by using the `getUser` method. This method will return user object which contains the private metadata.
+You can retrieve the private metadata for a user by using the [`getUser`](/docs/references/backend/user/get-user) method. This method will return the `User` object which contains the private metadata.
 
 <CodeBlockTabs options={['cURL', 'Pages Router', 'App Router', 'Node', 'Go','Ruby']}>
 ```bash copy filename="curl.sh"
@@ -268,19 +261,19 @@ clerk.users.updateMetadata("user_xyz", public_metadata: publicMetadata)
 
 ### Retrieving public metadata
 
-There are multiple ways to retrieve public metadata. It is available in the user object returned by the `useUser` hook, and it can also be attached to the session token to be retrieved with `auth()` and `useAuth()`. If you need to retrieve public metadata frequently in the backend, the best option is to attach it to the session token and retrieve it from the session token.
+There are multiple ways to retrieve public metadata. It is available on the `User` object returned by the [`useUser`](/docs/references/backend/user/use-user) hook, and it can also be attached to the session token to be retrieved with [`auth()`](/docs/references/nextjs/auth) and [`useAuth()`](/docs/references/react/use-auth). If you need to retrieve public metadata frequently in the backend, the best option is to attach it to the session token and retrieve it from the session token.
 
 To read about customizing your session token and retrieving that data, check out our [session token customization guide](/docs/advanced-usage/custom-session-token).
 
 ## Unsafe metadata
 
-If you need to implement custom fields that will be attached to the User object from the front-end (using our ClerkJS library or the Frontend API), you should choose the `unsafeMetadata` property.
+If you need to implement custom fields that will be attached to the `User` object from the frontend (using our ClerkJS library or the Frontend API), you should choose the `unsafeMetadata` property.
 
 One common use case for this attribute is to implement custom fields that will be attached to the `User` object.
 
-Clerk has named this type of metadata "unsafe" since it can be set and accessed by both the Frontend API and the Backend API. This provides a quick method to add custom attributes to a user. These attributes will be stored on the User object and will be available for access at all times.
+Clerk has named this type of metadata "unsafe" since it can be set and accessed by both the Frontend API and the Backend API. This provides a quick method to add custom attributes to a user. These attributes will be stored on the `User` object and will be available for access at all times.
 
-The "unsafe" custom attributes can be set upon sign-up when creating or updating a SignUp object. After a successful sign-up, these attributes will be copied to the User object. From that point on they can be accessed as a direct attribute of the User object.
+The "unsafe" custom attributes can be set upon sign-up when creating or updating a [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. After a successful sign-up, these attributes will be copied to the `User` object. From that point on they can be accessed as a direct attribute of the `User` object.
 
 ### Setting unsafe metadata
 
@@ -530,6 +523,6 @@ export default function UnSafePage() {
 
 ### Retrieving unsafe metadata
 
-There are multiple ways to retrieve unsafe metadata. It is available in the `User` object returned by the `useUser` hook, and it can also be attached to the session token to be retrieved with `auth()` or `useAuth()`. If you need to retrieve unsafe metadata frequently in the backend. The best option is to attach it to the session token and retrieve it from the session token.
+There are multiple ways to retrieve unsafe metadata. It is available in the `User` object returned by the `useUser` hook, and it can also be attached to the session token to be retrieved with `auth()` or `useAuth()`. If you need to retrieve unsafe metadata frequently in the backend, the best option is to attach it to the session token and retrieve it from the session token.
 
 To read about customization your session token and retrieving that data, check out our [session token customization guide](/docs/advanced-usage/custom-session-token).
