fix list items; update grammar

--- a/docs/quickstarts/web3.mdx
+++ b/docs/quickstarts/web3.mdx
@@ -17,14 +17,14 @@ Once you have a Clerk application set up in the dashboard, it's time to create a
 
 ## Requiring Web3 authentication
 
-The easiest way to require authentication before showing a protected page is to use our Control Components:
+The easiest way to require authentication before showing a protected page is to use Clerk's [Control Components](/docs/components/overview):
 
-[`​<SignedIn/>`](/docs/components/control/signed-in): Renders its children only when a user is signed in.
-[`​<SignedOut/>`](/docs/components/control/signed-out): Renders its children only when there's no active user.
+- [`​<SignedIn/>`](/docs/components/control/signed-in): Renders its children only when a user is signed in.
+- [`​<SignedOut/>`](/docs/components/control/signed-out): Renders its children only when there's no active user.
 
 As a child of `<SignedOut/>`, we will include our [`<SignInWithMetamaskButton/>`](/docs/components/unstyled/sign-in-with-metamask) so the user can trigger the Metamask authentication flow.
 
-The following example shows you how to compose our flexible [Control Components](/docs/components/overview) to build authentication flows that match your needs. Please note that you don't need to use any additional APIs, everything shown below is just Javascript.
+The following example shows you how to compose Clerk's Control Components to build authentication flows that match your needs. Please note that you don't need to use any additional APIs, everything shown below is just Javascript.
 
 ```jsx filename="_app.js" copy
 import '../styles/globals.css'
