remove unnecessary word

--- a/docs/users/overview.mdx
+++ b/docs/users/overview.mdx
@@ -23,4 +23,4 @@ If you are using React, the [React SDK](/docs/references/react/use-user) provide
 
 The [Clerk Backend SDK](https://github.com/clerkinc/javascript/tree/main/packages/backend) exposes Clerk's backend API resources and low-level authentication utilities for JavaScript environments. While the backend SDK is mainly used as a building block for Clerk's higher-level SDKs, it can also be used on its own for advanced flows and custom integrations.
 
-For information about the `User` operations available, such as `getUser()`, `createUser()`, and `deleteUser()`, check out the [Backend SDK references documentation](/docs/references/backend/overview).
+For information about the `User` operations available, such as `getUser()`, `createUser()`, and `deleteUser()`, check out the [Backend SDK documentation](/docs/references/backend/overview).
