--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -33,6 +33,8 @@ All members of an organization, regardless of their role, can view information a
 
 Administrators can [invite other users to join the organization](/docs/organizations/inviting-users). An invitation email is sent out, and organization invitations support adding existing users of your application, or new ones. New users can register once they accept the invitation.
 
+Administrators can also use [verified domains](/docs/organizations/verified-domains) to enhance how users can join organizations. Once a verified domain is added to an organization, administrators can choose between different enrollment modes: automatic invitations and automatic suggestions.
+
 Administrators can [manage roles](/docs/organizations/managing-roles), such as revoking an invitation for a user that hasn't joined yet or removing a user who is already a member from the organization. When removing organization members or updating their role, there needs to be at least one administrator for the organization at all times.
 
 Administrators can also [update an organization name](/docs/organizations/updating-organizations). 
