update: minor updates to useOrganizationList "returns"

--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -236,7 +236,7 @@ export default InvitationsTable;
 
 ## Returns
 
-The userMemberships, userInvitations, and userSuggestions are returned as paginated lists.
+The `userMemberships`, `userInvitations`, and `userSuggestions` are returned as paginated lists.
 
 | Variables | Description |
 | --- | --- |
