migrate page from sanity to mdx; update content and add more examples

--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -1,5 +1,69 @@
 ---
-sanity_slug: /docs/users/deleting-users
+title: Deleting users
+description: Learn how to delete users from your Clerk backend.
 ---
 
-# This is a stub
+# Deleting users
+
+Clerk currently supports deleting users through our [backend API](https://clerk.com/docs/reference/backend-api/tag/Users#operation/DeleteUser). 
+
+The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a single argument: the user ID of the user you want to delete. It can be accessed from the `users` sub-api of the `clerkClient`. 
+
+<CodeBlockTabs options={["Curl", "App router", "Pages router", "Node"]}>
+```bash copy filename="curl.sh"
+curl -XDELETE -H 'Authorization: CLERK_SECRET_KEY' 'https://api.clerk.com/v1/users/{user_id}'
+```
+
+```ts copy filename="app/route/private.ts"
+import { clerkClient } from "@clerk/nextjs";
+import { NextResponse } from 'next/server';
+
+export async function DELETE() {
+  const userId = await body.json().userId;
+
+  try {
+    await clerkClient.users.deleteUser(userId);
+    return NextResponse.json({ message: 'Success' });
+  }
+  catch (error) {
+    console.log(error);
+    return NextResponse.json({ error: 'Error deleting user' });
+  }
+}
+```
+
+```ts copy filename="pages/api/private.ts"
+import { clerkClient } from "@clerk/nextjs/server";
+import { NextApiRequest, NextApiResponse } from "next";
+
+export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+  const userId = req.body.userId;
+
+  try {
+    await clerkClient.users.deleteUser(userId);
+    return res.status(200).json({ message: 'Success' });
+  }
+  catch (error) {
+    console.log(error);
+    return res.status(500).json({ error: 'Error deleting user' });
+  }
+}
+```
+
+```ts copy filename="private.ts"
+import { clerk } from "@clerk/clerk-node-sdk";
+
+app.post('/deleteUser', (req, res) => {
+  const userId = req.body.userId;
+
+  try {
+    await clerkClient.users.deleteUser(userId);
+    return res.status(200).json({ message: 'Success' });
+  }
+  catch (error) {
+    console.log(error);
+    return res.status(500).json({ error: 'Error deleting user' });
+  }
+});
+```
+</CodeBlockTabs>
