alexis comments on codeblock tab, fixed up direct links example and yanked out image on overview until final one is ready

--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -11,11 +11,12 @@ You can use the following format for your direct links:
 
 `https://accounts.<your-domain.com>/<account-portal-page>?redirect_url=<your-redirect-url>`
 
-## Example
+**Example**  
 
-In this example, the domain is `myapp.com`, the user is being linked to the sign-in Account Portal page, and the user will be redirected to `https://myapp.com/dashboard` after they are signed in.
+If you use `https://accounts.myapp.com/sign-in?redirect_url=https://myapp.com/dashboard` 
 
-`https://accounts.myapp.com/sign-in?redirect_url=https://myapp.com/dashboard`
+The domain is `myapp.com`, the user is being linked to the sign-in Account Portal page at `http://accounts.myapp.com/sign-in` and they will be redirected to `https://myapp.com/dashboard` after they are signed in.
+
 
 
 ## Fallback redirects
