--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -11,20 +11,16 @@ After a user signs in or signs up, Clerk automatically redirects users back to y
 
 You can define the paths you want the users to be redirected to via environment variables. In this example, we redirect users to `/dashboard` after signing in, and to `/onboarding` after signing up.
 
-<Tabs items={["Next.js", "Remix"]}>
-<Tab>
+<CodeBlockTabs options={['Next.js', 'Remix']}>
 ```sh filename=".env" copy
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
 ```
-</Tab>
-<Tab>
 ```sh filename=".env" copy
 CLERK_AFTER_SIGN_IN_URL=/dashboard
 CLERK_AFTER_SIGN_UP_URL=/onboarding
 ```
-</Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ## Middleware
 
