consolidate PR-268 with this PR

--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -9,7 +9,7 @@ Clerk currently supports deleting users through our [backend API](https://clerk.
 
 The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a single argument: the user ID of the user you want to delete. It can be accessed from the `users` sub-api of the `clerkClient`. 
 
-<CodeBlockTabs options={["Curl", "App router", "Pages router", "Node"]}>
+<CodeBlockTabs options={["Curl", "Next.js App Router", "Next.js Pages Router", "Node"]}>
 ```bash copy filename="curl.sh"
 curl -XDELETE -H 'Authorization: CLERK_SECRET_KEY' 'https://api.clerk.com/v1/users/{user_id}'
 ```
@@ -57,7 +57,7 @@ app.post('/deleteUser', (req, res) => {
   const userId = req.body.userId;
 
   try {
-    await clerkClient.users.deleteUser(userId);
+    await clerk.users.deleteUser(userId);
     return res.status(200).json({ message: 'Success' });
   }
   catch (error) {
