add web3 back to users context

--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -13,7 +13,7 @@ You need to create a Clerk application in your [Clerk Dashboard](https://dashboa
 
 ## Creating a new Next.js app
 
-Once you have a Clerk application set up in the dashboard, it's time to create a Next.js application. Clerk provides a detailed guide on how to [create a new Next.js app with Clerk](https://docs.clerk.dev/guides/nextjs).
+Once you have a Clerk application set up in the dashboard, it's time to create a Next.js application. Clerk provides a detailed guide on how to [create a new Next.js app with Clerk](/docs/quickstarts/nextjs).
 
 ## Requiring Web3 authentication
 
