--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -1,6 +1,6 @@
 ---
 title: Direct links | Account Portal
-description: Learn how to share direct links to your Account Portal pages, and how to set up fallback redirects
+description: Learn how to share direct links to your Account Portal pages, and how to set up fallback redirects.
 ---
 
 # Direct links
