--- a/docs/account-portal/direct-links.mdx
+++ b/docs/account-portal/direct-links.mdx
@@ -27,7 +27,7 @@ In the case that a user does visit an Account Portal page directly without the q
 
 ### Set your static fallback host
 
-Set your fallback host under **Paths** in the Clerk Dashboard. 
+Set your fallback host under [Paths](https://dashboard.clerk.com/last-active?path=paths) in the Clerk Dashboard. 
 
 For development, set your static fallback localhost with the port that you use (e.g. `http://localhost:3000`). Clerk will use this fallback host if a dev browser fails to be retrieved for your client. 
 
