--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -1,6 +1,6 @@
 ---
 title: Customizing your redirects | Account Portal
-description:  Customize where your users are redirected to after they sign-in or sign-up.
+description:  Customize where your users are redirected to after they sign in or sign up.
 ---
 
 # Customizing your Account Portal redirects
