--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -1,6 +1,6 @@
 ---
 title: <SignInButton />
-description: The `<SignInButton />` component is a button that links to the sign-in page or displays the sign-in modal.
+description: The <SignInButton /> component is a button that links to the sign-in page or displays the sign-in modal.
 ---
 
 # `<SignInButton />`
