--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -1,6 +1,6 @@
 ---
 title: <SignUpButton />
-description: The `<SignUpButton />` component is a button that links to the sign-up page or displays the sign-up modal.
+description: The <SignUpButton /> component is a button that links to the sign-up page or displays the sign-up modal.
 ---
 
 # `<SignUpButton />`
