--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -259,7 +259,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 ### Toolbar controls
 
-Note that the toolbar contains 2 types of controls:
+Note that the toolbar contains two types of controls:
 
 1. Buttons - expose a sub-menu with more settings you can apply to the currently selected block or text; you can switch from one button to another with a single click.
 2. Toggles - switch the editor to another view mode, in which all other tools become disabled. To exit the current mode, you will need to toggle back.
