--- a/docs/authentication/configuration/email-options.mdx
+++ b/docs/authentication/configuration/email-options.mdx
@@ -368,7 +368,7 @@ Exposes a color picker so that you can select the color of the fonts in the affe
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-text-color.jpg"
-alt="The 'Invitation' email template customization page. There is a red box around the 'Link' icon in the toolbar of the 'Email body' WYSIWG editor."
+alt="The 'Invitation' email template customization page. There is a red box around the 'Color' icon in the toolbar of the 'Email body' WYSIWG editor."
 />
 
 #### Variable button
