--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -7,7 +7,7 @@ description: Learn how to delete users from your Clerk backend.
 
 Clerk currently supports deleting users through our [backend API](https://clerk.com/docs/reference/backend-api/tag/Users#operation/DeleteUser). 
 
-The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a single argument: the user ID of the user you want to delete. It can be accessed from the `users` sub-api of the `clerkClient`. 
+The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a single argument: the user ID of the user you want to delete. It can be accessed from the `users` sub-api of the `clerkClient` instance.
 
 <CodeBlockTabs options={["Curl", "Next.js App Router", "Next.js Pages Router", "Node"]}>
 ```bash copy filename="curl.sh"
