update code examplse

--- a/docs/users/deleting-users.mdx
+++ b/docs/users/deleting-users.mdx
@@ -14,12 +14,12 @@ The [`deleteUser()`](/docs/references/backend/user/delete-user) method takes a s
 curl -XDELETE -H 'Authorization: CLERK_SECRET_KEY' 'https://api.clerk.com/v1/users/{user_id}'
 ```
 
-```ts copy filename="app/route/private.ts"
+```ts copy filename="app/private/route.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextResponse } from 'next/server';
 
-export async function DELETE() {
-  const userId = await body.json().userId;
+export async function DELETE(request: Request) {
+  const { userId } = await request.body.json();
 
   try {
     await clerkClient.users.deleteUser(userId);
