Shehz/account portal (#218)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/components/control/redirect-to-organizationprofile.mdx
+++ b/docs/components/control/redirect-to-organizationprofile.mdx
@@ -1,11 +1,11 @@
 ---
-title: <RedirectToUserProfile />
-description: The <RedirectToUserProfile /> component will navigate to the user profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
+title: <RedirectToOrganizationProfile />
+description: The <RedirectToOrganizationProfile /> component will navigate to the organization profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 ---
 
-# `<RedirectToUserProfile />`
+# `<RedirectToOrganizationProfile />`
 
-The `<RedirectToUserProfile />` component will navigate to the user profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
+The `<RedirectToOrganizationProfile />` component will navigate to the organization profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 
 ## Usage
 
@@ -16,7 +16,7 @@ import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToUserProfile,
+  RedirectToOrganizationProfile,
 } from "@clerk/nextjs";
 import { AppProps } from "next/app";
 
@@ -25,7 +25,7 @@ function MyApp({ Component, pageProps } : AppProps) {
   return (
     <ClerkProvider {...pageProps}>
       <SignedIn>
-        <RedirectToUserProfile/>
+        <RedirectToOrganizationProfile/>
       </SignedIn>
       <SignedOut>
         Please Sign In
@@ -44,14 +44,14 @@ import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToUserProfile
+  RedirectToOrganizationProfile
 } from "@clerk/clerk-react";
 
 function PrivatePage() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
       <SignedIn>
-        <RedirectToUserProfile/>
+        <RedirectToOrganizationProfile/>
       </SignedIn>
       <SignedOut>
         Please Sign In
@@ -67,14 +67,14 @@ function PrivatePage() {
 import {
   SignedIn,
   SignedOut,
-  RedirectToUserProfile
+  RedirectToOrganizationProfile
 } from "@clerk/remix";
 
 export default function Index() {
   return (
     <div>
       <SignedIn>
-        <RedirectToUserProfile/>
+        <RedirectToOrganizationProfile/>
       </SignedIn>
       <SignedOut>
         <p>Please sign in </p>
