--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -1,9 +1,7 @@
 ---
 title: <RedirectToSignUp />
-description: The `<RedirectToSignUp />` component will navigate to the sign up URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
+description: The <RedirectToSignUp /> component will navigate to the sign up URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 ---
-
-import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<RedirectToSignUp />`
 
@@ -38,6 +36,7 @@ function MyApp({ Component, pageProps } : AppProps) {
 export default MyApp;
 ```
 </Tab>
+
 <Tab>
 ```tsx copy filename="pages/privatepage.tsx"
 import {
@@ -62,6 +61,7 @@ function PrivatePage() {
 }
 ```
 </Tab>
+
 <Tab>
 ```tsx filename="routes/index.tsx" copy
 import {
@@ -88,3 +88,32 @@ export default function Index() {
 ```
 </Tab>
 </Tabs>
+
+## Props
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+    {
+      cells: [
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign up.</>,
+      ],
+    }
+  ]}
+/>
