--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -1,11 +1,7 @@
 ---
 title: <SignUpButton />
-description: The `<SignUpButton />` component is a button that links to the sign-up page or displays the sign-up modal.
+description: The <SignUpButton /> component is a button that links to the sign-up page or displays the sign-up modal.
 ---
-
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<SignUpButton />`
 
@@ -142,3 +138,32 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 </CodeBlockTabs>
+
+## Props
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+    {
+      cells: [
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign up.</>,
+      ],
+    }
+  ]}
+/>
