--- a/docs/components/control/redirect-to-createorganization.mdx
+++ b/docs/components/control/redirect-to-createorganization.mdx
@@ -1,11 +1,11 @@
 ---
-title: <RedirectToUserProfile />
-description: The <RedirectToUserProfile /> component will navigate to the user profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
+title: <RedirectToCreateOrganization />
+description: The <RedirectToCreateOrganization /> component will navigate to the user profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 ---
 
-# `<RedirectToUserProfile />`
+# `<RedirectToCreateOrganization />`
 
-The `<RedirectToUserProfile />` component will navigate to the user profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
+The `<RedirectToCreateOrganization />` component will navigate to the create organization flow which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 
 ## Usage
 
@@ -16,7 +16,7 @@ import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToUserProfile,
+  RedirectToCreateOrganization,
 } from "@clerk/nextjs";
 import { AppProps } from "next/app";
 
@@ -25,7 +25,7 @@ function MyApp({ Component, pageProps } : AppProps) {
   return (
     <ClerkProvider {...pageProps}>
       <SignedIn>
-        <RedirectToUserProfile/>
+        <RedirectToCreateOrganization/>
       </SignedIn>
       <SignedOut>
         Please Sign In
@@ -44,14 +44,14 @@ import {
   ClerkProvider,
   SignedIn,
   SignedOut,
-  RedirectToUserProfile
+  RedirectToCreateOrganization
 } from "@clerk/clerk-react";
 
 function PrivatePage() {
   return (
     <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
       <SignedIn>
-        <RedirectToUserProfile/>
+        <RedirectToCreateOrganization/>
       </SignedIn>
       <SignedOut>
         Please Sign In
@@ -67,14 +67,14 @@ function PrivatePage() {
 import {
   SignedIn,
   SignedOut,
-  RedirectToUserProfile
+  RedirectToCreateOrganization
 } from "@clerk/remix";
 
 export default function Index() {
   return (
     <div>
       <SignedIn>
-        <RedirectToUserProfile/>
+        <RedirectToCreateOrganization/>
       </SignedIn>
       <SignedOut>
         <p>Please sign in </p>
