--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -1,11 +1,7 @@
 ---
 title: <SignInButton />
-description: The `<SignInButton />` component is a button that links to the sign-in page or displays the sign-in modal.
+description: The <SignInButton /> component is a button that links to the sign-in page or displays the sign-in modal.
 ---
-
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<SignInButton />`
 
@@ -134,3 +130,32 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 </CodeBlockTabs>
+
+## Props
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  rows={[
+    {
+      cells: [
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign up.</>,
+      ],
+    }
+  ]}
+/>
