--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -275,7 +275,7 @@ These values control the behavior of the components when you sign in or sign up 
 
 #### Client side
 
-Clerk offers Control Components that allow you to protect your pages. Below is a simple example using Clerk's hosted components and the `<SignedIn/>` and `<SignedOut/>` control components.
+Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
 
 ```tsx filename="routes/index.tsx" copy
 import {
