update: <OrganizationList/> props

--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -90,8 +90,58 @@ TODO: add all props
         <code>hidePersonal</code>,
         <code>boolean</code>,
         <>
-          TODO
-          <br/>Defaults to: <code>true</code>
+          By default, users can switch between organization and their personal account.
+This option controls whether <code>{"<OrganizationList />"}</code> will include the user's personal account
+in the organization list. Setting this to <code>false</code> will hide the personal account entry,
+and users will only be able to switch between organizations.
+          <br/>Defaults to: <code>false</code>
+        </>,
+      ],
+    },
+    {
+      cells: [
+        <code>skipInvitationScreen</code>,
+        <code>boolean | undefined</code>,
+        <>
+          Hides the screen for sending invitations after an organization is created.
+          When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1
+          <br/>Defaults to: <code>false</code>
+        </>,
+      ],
+    },
+    {
+      cells: [
+        <code>appearance</code>,
+        <code>object</code>,
+        <>
+         Controls the overall look and feel.
+        </>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterCreateOrganizationUrl</code>,
+        <code>((org: Organization) =&gt; string) | string</code>,
+        <>Full URL or path to navigate after creating a new organization.
+          <br/>Defaults to: <code>undefined</code>
+        </>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSelectOrganizationUrl</code>,
+        <code>((org: Organization) =&gt; string) | string</code>,
+        <>Full URL or path to navigate after creating a new organization.
+          <br/>Defaults to: <code>undefined</code>
+        </>,
+      ],
+    },
+     {
+      cells: [
+        <code>afterSelectPersonalUrl</code>,
+        <code>((user: Organization) =&gt; string) | string</code>,
+        <>Full URL or path to navigate after creating a new organization.
+          <br/>Defaults to: <code>undefined</code>
         </>,
       ],
     },
