Update all references to the matcher

--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -15,7 +15,7 @@ import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware();
 
 export const config = {
-  matcher: ["/((?!.+[\\w]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+  matcher: ["/((?!.+[\\w-\\$\\(\\)]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
@@ -69,7 +69,7 @@ export default authMiddleware({
 });
 
 export const config = {
-  matcher: ["/((?!.+[\\w]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+  matcher: ["/((?!.+[\\w-\\$\\(\\)]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
@@ -85,7 +85,7 @@ export default authMiddleware({
 });
 
 export const config = {
-  matcher: ["/((?!.+[\\w]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
+  matcher: ["/((?!.+[\\w-\\$\\(\\)]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
