--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -98,7 +98,7 @@ import { authMiddleware } from "@clerk/nextjs";
 export default authMiddleware({});
 
 export const config = {
-  matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
+  matcher: ["/((?!.+[\\w-\\$\\(\\)]+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 
 ```
