Migrate 'Deleting users' from Sanity to MDX (#273)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -111,42 +111,49 @@ clerk.users.updateMetadata("user_xyz", private_metadata: privateMetadata)
 
 You can retrieve the private metadata for a user by using the [`getUser`](/docs/references/backend/user/get-user) method. This method will return the `User` object which contains the private metadata.
 
-<CodeBlockTabs options={['cURL', 'Pages Router', 'App Router', 'Node', 'Go','Ruby']}>
+<CodeBlockTabs options={['cURL', 'Next.js App Router', 'Next.js Pages Router', 'Node', 'Go','Ruby']}>
 ```bash copy filename="curl.sh"
 curl -XGET -H 'Authorization: CLERK_SECRET_KEY' -H "Content-type: application/json" 'https://api.clerk.com/v1/users/{user_id}'
 ```
+
+```ts copy filename="app/private/route.ts"
+import { NextResponse } from 'next/server';
+import { clerkClient } from "@clerk/nextjs";
+
+export async function GET(request: Request) {
+  const { stripeId, userId } = await request.body.json();
+
+  const user = await clerkClient.users.getUser(userId)
+  return NextResponse.json(user.privateMetadata);
+}
+```
+
 ```ts copy filename="pages/api/private.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { NextApiRequest, NextApiResponse } from "next";
 
 export default async function handler(req: NextApiRequest, res: NextApiResponse) {
+  const { userId } = await req.body.json();
 
-  const user = await clerkClient.users.getUser("userId")
+  const user = await clerkClient.users.getUser(userId)
 
   res.status(200).json(user.privateMetadata);
 }
 ```
-```ts copy filename="app/route/private.ts"
-import { NextResponse } from 'next/server';
-import { clerkClient } from "@clerk/nextjs";
 
-export async function GET() {
-  const { stripeId, userId } = await body.json();
-  const user = await clerkClient.users.getUser("userId")
-  return NextResponse.json(user.privateMetadata);
-}
-```
 ```ts copy filename="private.ts"
 import { clerkClient } from "@clerk/clerk-node-sdk";
 
 app.post('/updateStripe', (req, res) => {
+  const { userId } = await req.body.json();
 
-  const user = await clerkClient.users.getUser("userId")
+  const user = await clerkClient.users.getUser(userId)
 
   res.status(200).json(user.privateMetadata);
 });
 
 ```
+
 ```ts copy filename="private.go"
 var client clerk.Client
 
@@ -158,6 +165,7 @@ func GetUserMetadata(user *clerk.User, stripeCustomerID string) error {
 	}
 }
 ```
+
 ```ts copy filename="private.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
