--- a/docs/authentication/social-connections/coinbase.mdx
+++ b/docs/authentication/social-connections/coinbase.mdx
@@ -28,11 +28,21 @@ First, you need to create a new OAuth2 Coinbase app. You can find this option in
 
 You need to set all the required fields and the corresponding **Permitted Redirect URIs**. Under **Advanced Settings**, make sure to also select **Reuse Existing Tokens** for **Previously-Authorized Users** so that your users won't get notified everytime they sign in with their Coinbase account. Then, click **Create application**.
 
-![](/docs/images/authentication-providers/coinbase/be8d81c63c6dfe3d63f30da2e3327903e637f971-1301x1647.png)
+<Images
+  width={1301}
+  height={1647}
+  src="/docs/images/authentication-providers/coinbase/creating-application.jpg"
+  alt="Creating application"
+/>
 
 Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Coinbase. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
 
-![](/docs/images/authentication-providers/coinbase/47fd5528d222a5040f58056493eab2f9d3c3ee5e-1303x1027.png)
+<Images
+  width={1303}
+  height={1027}
+  src="/docs/images/authentication-providers/coinbase/copying-values-into-clerk-dashboard.jpg"
+  alt="Copying the Client ID and Client Secret into the Clerk dashboard"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
 
