fix: Missing alt on Atlassian

--- a/docs/authentication/social-connections/atlassian.mdx
+++ b/docs/authentication/social-connections/atlassian.mdx
@@ -34,7 +34,7 @@ From there, click on the desired existing app or create a new one, which will ta
 
 While not necessary for the integration to work, you can edit your app name, description and set a logo for it in the **Settings** tab.
 
-![](/docs/images/authentication-providers/atlassian/b2762ea10eebe6f05f39aa9ed33c54ca41bc2f3d-3456x1730.png)
+![Atlassian OAuth 2.0 settings page](/docs/images/authentication-providers/atlassian/b2762ea10eebe6f05f39aa9ed33c54ca41bc2f3d-3456x1730.png)
 
 From the app page, click on the **Permissions** tab in the sidebar menu.
 
@@ -56,7 +56,7 @@ In this section, you will need to paste the Authorized redirect URI that Clerk h
 
 After entering the callback URL, the Client ID & Client Secret will now be available in the **Settings** tab:
 
-![](/docs/images/authentication-providers/atlassian/fdc89459cdc6450c4dbde713e7b840d93b01c862-3456x1730.png)
+![Atlassian OAuth 2.0 settings page with Client ID & Client Secret](/docs/images/authentication-providers/atlassian/fdc89459cdc6450c4dbde713e7b840d93b01c862-3456x1730.png)
 
 You will need to copy these values and paste:
 
