--- a/docs/authentication/social-connections/box.mdx
+++ b/docs/authentication/social-connections/box.mdx
@@ -28,11 +28,21 @@ First, you need to create a new OAuth2 Box app. You can find this option in your
 
 You need to choose an app name and then click **Create application**.
 
-![](/docs/images/authentication-providers/box/b35c9fd411af0c222b38b4ae331475b295948e12-1920x821.png)
+<Images
+  width={1920}
+  height={821}
+  src="/docs/images/authentication-providers/box/adding-name-and-creating-application.jpg"
+  alt="Adding a name and creating the application"
+/>
 
 Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Box. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Make sure the value matches the **Redirect URIs**, as shown below.
 
-![](/docs/images/authentication-providers/box/482c77fbef65ec039e500b0fb11367466a6e26a0-1916x820.png)
+<Images
+  width={1916}
+  height={820}
+  src="/docs/images/authentication-providers/box/verifying-values-on-configuration-page.jpg"
+  alt="Verifying the values on the configuration page"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
 
