chore: Rename Box image

--- a/docs/authentication/social-connections/coinbase.mdx
+++ b/docs/authentication/social-connections/coinbase.mdx
@@ -40,8 +40,8 @@ Go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path
 <Images
   width={1303}
   height={1027}
-  src="/docs/images/authentication-providers/coinbase/copying-values-into-clerk-dashboard.jpg"
-  alt="Copying the Client ID and Client Secret into the Clerk dashboard"
+  src="/docs/images/authentication-providers/coinbase/copying-values-from-box-dashboard.jpg"
+  alt="Copying the Client ID and Client Secret from the Box dashboard"
 />
 
 Copy the **Client ID** and **Client secret** as shown in the above image. Go back to the Clerk Dashboard and paste them into the respective fields.
