--- a/docs/authentication/social-connections/line.mdx
+++ b/docs/authentication/social-connections/line.mdx
@@ -28,7 +28,12 @@ For production instances, you will need to generate your own Client ID and Clien
 
 First, you need to create a new provider. Fill in a name and click **Create**.
 
-![](/docs/images/authentication-providers/line/3ad738aa92914c9e778ee4cd861ed0cf5cf34d03-1909x779.png)
+<Images
+  width={1909}
+  height={779}
+  src="/docs/images/authentication-providers/line/creating-new-provider.jpg"
+  alt="Creating a new provider"
+/>
 
 The next step is to create a new **LINE Login channel**. You will have to select the provider you created before, the region to provide your LINE service, a channel name, and description and finally select **Web app** as the **App type**.
 
@@ -38,6 +43,11 @@ You also need to add the **OAuth Redirect URLs.** Go to the [Social Connections 
 
 Once all the above are complete, copy the **Channel ID** and **Channel secret.** Go back to the Clerk Dashboard and paste them into the respective fields.
 
-![](/docs/images/authentication-providers/line/fcec2741d1d9210fd18ab94415e50253ef7eb77f-1908x782.png)
+<Images
+  width={1908}
+  height={782}
+  src="/docs/images/authentication-providers/line/pasting-value-into-line-dashboard.jpg"
+  alt="Pasting value into LINE dashboard"
+/>
 
 Don't forget to click **Apply** in the Clerk dashboard. Congratulations! Social connection with LINE is now configured for your instance.
