--- a/docs/authentication/social-connections/linear.mdx
+++ b/docs/authentication/social-connections/linear.mdx
@@ -28,11 +28,21 @@ First, you need to create a new OAuth Linear app. Navigate on your **Settings > 
 
 For the Callback URLs field, go to the [Social Connections page](https://dashboard.clerk.dev/last-active?path=authentication/social) in your Clerk Dashboard and enable Linear. In the modal that opened, ensure **Use custom credentials** is enabled and copy **Authorized redirect URI**. Paste this value in the Callback URLs field of your Linear application.
 
-![](/docs/images/authentication-providers/linear/a2765ad6577f24e722a2135bcf4c7760744c85c7-1399x885.png)
+<Images
+  width={1399}
+  height={885}
+  src="/docs/images/authentication-providers/linear/creating-new-application.jpg"
+  alt="Creating a new application"
+/>
 
 When you have filled all the necessary info, click **Create**. Congratulations, you have successfully created your Linear OAuth application.
 
-![](/docs/images/authentication-providers/linear/d43440ad2d564b7ec7f5809a44156bc8b3911a4b-1065x596.png)
+<Images
+  width={1065}
+  height={596}
+  src="/docs/images/authentication-providers/linear/copying-values-from-linear-dashboard.jpg"
+  alt="Copying values from the Linear dashboard"
+/>
 
 Copy the **Client ID** and **Client secret** as shown in the above image from the **Basic Information** menu of your app. Go back to the Clerk Dashboard and paste them into the respective fields.
 
